cleanup and updates to skin display, with working base, for items in view

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -44,6 +44,7 @@
   <script type="text/javascript" src="js/action-modes/look/point-cloud-view.js"></script>
   <script type="text/javascript" src="js/action-modes/look/get-clicked-pose.js"></script>
   <script type="text/javascript" src="js/action-modes/drive/drive.js"></script>
+  <script type="text/javascript" src="js/action-modes/drive/bumper-display.js"></script>
   <script type="text/javascript" src="js/action-modes/drive/drive-goal-display.js"></script>
   <script type="text/javascript" src="js/action-modes/torso/torso.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/gripper.js"></script>
@@ -70,6 +71,7 @@
   <link type="text/css" href="css/battery.css" rel="stylesheet" />
   <link type="text/css" href="css/ee-cart.css" rel="stylesheet" />
   <link type="text/css" href="css/skin.css" rel="stylesheet" />
+  <link type="text/css" href="css/bumper.css" rel="stylesheet" />
   <link type="text/css" href="css/gripper.css" rel="stylesheet" />
   <link type="text/css" href="css/undo.css" rel="stylesheet" />
   <link type="text/css" href="css/smach.css" rel="stylesheet" />
