using single skin display for arms and base

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -44,7 +44,6 @@
   <script type="text/javascript" src="js/action-modes/look/point-cloud-view.js"></script>
   <script type="text/javascript" src="js/action-modes/look/get-clicked-pose.js"></script>
   <script type="text/javascript" src="js/action-modes/drive/drive.js"></script>
-  <script type="text/javascript" src="js/action-modes/drive/bumper-display.js"></script>
   <script type="text/javascript" src="js/action-modes/drive/drive-goal-display.js"></script>
   <script type="text/javascript" src="js/action-modes/torso/torso.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/gripper.js"></script>
@@ -260,6 +259,14 @@
         <div id="bumper-10" class="bumper edge edge-rb"></div>
         <div id="bumper-11" class="bumper edge edge-lf"></div>
         <div id="bumper-12" class="bumper edge edge-lb"></div>
+        <div id="edge-contact-n" class="edge-contact n"></div>
+        <div id="edge-contact-ne" class="edge-contact ne"></div>
+        <div id="edge-contact-e" class="edge-contact e"></div>
+        <div id="edge-contact-se" class="edge-contact se"></div>
+        <div id="edge-contact-s" class="edge-contact s"></div>
+        <div id="edge-contact-sw" class="edge-contact sw"></div>
+        <div id="edge-contact-w" class="edge-contact w"></div>
+        <div id="edge-contact-nw" class="edge-contact nw"></div>
      </div>
      <!-- divs for torso controls -->
      <img id="torso-tall-icon" src="./css/icons/tall.png"></img>
