adding shaver module and toggle button to interface

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -37,6 +37,7 @@
   <script type="text/javascript" src="js/utils/datalogging.js"></script>
   <script type="text/javascript" src="js/utils/fabric-skin.js"></script>
   <script type="text/javascript" src="js/utils/battery-monitor.js"></script>
+  <script type="text/javascript" src="js/utils/shaver.js"></script>
   <script type="text/javascript" src="js/utils/pr2.js"></script>
   <!-- Interface action modes -->
   <script type="text/javascript" src="js/action-modes/action-menu.js"></script>
@@ -166,6 +167,8 @@
                 <div id="left-tuck-setup-button" class="posture manip l-arm-ctrl controls-button log-click">Move to Setup</div>
                 <div id="zero-skin-left" class="l-arm-ctrl controls-button log-click">Re-zero Skin</div>
             </div>
+
+            <div id="toggle-shaver-button" class="arm-ctrl controls-button log-click">Toggle Shaver</div>
         </div>
     </div>
     <div id="task-menu-accordion" class="left-col-accordion task-menu-accordion log-activate">
