--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -53,7 +53,7 @@
   <script type="text/javascript" src="js/action-modes/ee-control/ee-display.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/arm-postures.js"></script>
   <script type="text/javascript" src="js/action-modes/ee-control/skin-display.js"></script>
-  <!-- Plannable tasks -->
+  <!-- Plannable tasks 
   <script type="text/javascript" src="js/task-planning/display-smach-plan.js"></script>
   <script type="text/javascript" src="js/task-planning/task-menu.js"></script>
   <script type="text/javascript" src="js/task-planning/domains/pick.js"></script>
@@ -62,21 +62,22 @@
   <script type="text/javascript" src="js/task-planning/domains/adl.js"></script>
   <script type="text/javascript" src="js/task-planning/domains/tool-pick.js"></script>
   <script type="text/javascript" src="js/task-planning/domains/realtime-base-selection.js"></script>
+  -->
   <!-- CSS -->
   <link type="text/css" href="css/notifications.css" rel="stylesheet" />
   <link type="text/css" href="css/page-wide.css" rel="stylesheet" />
   <link type="text/css" href="css/look.css" rel="stylesheet" />
   <link type="text/css" href="css/torso.css" rel="stylesheet" />
   <link type="text/css" href="css/drive.css" rel="stylesheet" />
+  <link type="text/css" href="css/action-menu.css" rel="stylesheet" />
   <link type="text/css" href="css/battery.css" rel="stylesheet" />
   <link type="text/css" href="css/ee-cart.css" rel="stylesheet" />
   <link type="text/css" href="css/skin.css" rel="stylesheet" />
   <link type="text/css" href="css/bumper.css" rel="stylesheet" />
   <link type="text/css" href="css/gripper.css" rel="stylesheet" />
-  <link type="text/css" href="css/undo.css" rel="stylesheet" />
+  <!--<link type="text/css" href="css/undo.css" rel="stylesheet" />
   <link type="text/css" href="css/smach.css" rel="stylesheet" />
-  <link type="text/css" href="css/action-menu.css" rel="stylesheet" />
-  <link type="text/css" href="css/task-menu.css" rel="stylesheet" />
+  <link type="text/css" href="css/task-menu.css" rel="stylesheet" />-->
   
 </head>
 
@@ -171,7 +172,7 @@
             <div id="toggle-shaver-button" class="arm-ctrl controls-button log-click">Toggle Shaver</div>
         </div>
     </div>
-    <div id="task-menu-accordion" class="left-col-accordion task-menu-accordion log-activate">
+  <!--  <div id="task-menu-accordion" class="left-col-accordion task-menu-accordion log-activate">
         <h3>Task Menu</h3>
         <div id="task-menu">
             <form>
@@ -201,6 +202,7 @@
     </div>
 
     <div id="undo" class="log-click"><p>Undo</p></div>
+    -->
      <div id="util-bar">
         <div id='battery-status'>
             <div class='battery-contact'></div>
