changing name of web interface page

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Video-centric Web Interface</title>
+  <title>Control Interface</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!-- Jquery and JQueryUI -->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
@@ -150,6 +150,7 @@
                 <div id="right-tuck-aside-button" class="posture aside r-arm-ctrl controls-button log-click">Move Aside</div>
                 <div id="right-tuck-setup-button" class="posture manip r-arm-ctrl controls-button log-click">Move to Setup</div>
                 <div id="zero-skin-right" class="r-arm-ctrl controls-button log-click">Re-zero Skin</div>
+                <div id="toggle-shaver-button" class="r-arm-ctrl controls-button log-click">Toggle Shaver</div>
             </div>
 
             <!-- Left Arm Controls -->
@@ -169,7 +170,6 @@
                 <div id="zero-skin-left" class="l-arm-ctrl controls-button log-click">Re-zero Skin</div>
             </div>
 
-            <div id="toggle-shaver-button" class="arm-ctrl controls-button log-click">Toggle Shaver</div>
         </div>
     </div>
   <!--  <div id="task-menu-accordion" class="left-col-accordion task-menu-accordion log-activate">
