returning gripper previews, adding extra frame to fix kinect offsets

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -38,7 +38,7 @@
   <script type="text/javascript" src="js/utils/datalogging.js"></script>
   <script type="text/javascript" src="js/utils/fabric-skin.js"></script>
   <script type="text/javascript" src="js/utils/battery-monitor.js"></script>
-  <script type="text/javascript" src="js/utils/shaver.js"></script>
+<!--  <script type="text/javascript" src="js/utils/shaver.js"></script>-->
   <script type="text/javascript" src="js/utils/pr2.js"></script>
   <!-- Interface action modes -->
   <script type="text/javascript" src="js/action-modes/action-menu.js"></script>
@@ -151,7 +151,7 @@
                 <div id="right-tuck-aside-button" class="posture aside r-arm-ctrl controls-button log-click">Move Aside</div>
                 <div id="right-tuck-setup-button" class="posture manip r-arm-ctrl controls-button log-click">Move to Setup</div>
                 <div id="zero-skin-right" class="r-arm-ctrl controls-button log-click">Re-zero Skin</div>
-                <div id="toggle-shaver-button" class="r-arm-ctrl controls-button log-click">Toggle Shaver</div>
+<!--                <div id="toggle-shaver-button" class="r-arm-ctrl controls-button log-click">Toggle Shaver</div>-->
             </div>
 
             <!-- Left Arm Controls -->
