--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -204,7 +204,7 @@
 
     <div id="undo" class="log-click"><p>Undo</p></div>
     -->
-     <div id="util-bar">
+<!--     <div id="util-bar">
         <div id='battery-status'>
             <div class='battery-contact'></div>
             <div class='battery-main'>
@@ -216,7 +216,7 @@
             </div>
         </div>
         <div id="runstop-button" class="log-click">RUN-STOP</div>
-     </div>
+     </div>-->
  </div>
  <div id="left-col-small"></div>
 
