removed remainder of pick and place etc

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -140,7 +140,7 @@
                 <div id="right-3d-peek-button" class="camera-swing r-arm-ctrl controls-button log-click">3D Peek</div>
                 <div id="right-tuck-aside-button" class="posture aside r-arm-ctrl controls-button log-click">Move Aside</div>
                 <div id="right-tuck-setup-button" class="posture manip r-arm-ctrl controls-button log-click">Move to Setup</div>
-                <!--div id="zero-skin-right" class="r-arm-ctrl controls-button log-click">Re-zero Skin</div-->
+                <div id="zero-skin-right" class="r-arm-ctrl controls-button log-click">Re-zero Skin</div>
             </div>
 
             <!-- Left Arm Controls -->
@@ -157,7 +157,7 @@
                 <div id="left-3d-peek-button" class="camera-swing l-arm-ctrl controls-button log-click">3D Peek</div>
                 <div id="left-tuck-aside-button" class="posture aside l-arm-ctrl controls-button  log-click">Move Aside</div>
                 <div id="left-tuck-setup-button" class="posture manip l-arm-ctrl controls-button log-click">Move to Setup</div>
-                <!--div id="zero-skin-left" class="l-arm-ctrl controls-button log-click">Re-zero Skin</div-->
+                <div id="zero-skin-left" class="l-arm-ctrl controls-button log-click">Re-zero Skin</div>
             </div>
 
             <!--div id="toggle-shaver-button" class="arm-ctrl controls-button log-click">Toggle Shaver</div-->
@@ -177,8 +177,8 @@
                     <option value="wiping_mouth">Wipe Mouth</option>
                     <option value="scratching_left_knee">Wipe Left Knee</option>
                 </select>
-                <label for="arm-select" class="option-select option-realtime_base_selection option-pick_and_place">Select arm</label>
-                <select id="arm-select" name="arm-select" class='option-select option-realtime_base_selection option-pick_and_place'>
+                <label for="arm-select" class="option-select option-adl">Select arm</label>
+                <select id="arm-select" name="arm-select" class="option-select option-adl">
                     <option value="left_arm">Left Arm</option>
                     <option value="right_arm">Right Arm</option>
                 </select>
