--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Video-centric Web Interface</title>
+  <title>Control Interface</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!-- Jquery and JQueryUI -->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
@@ -222,7 +222,7 @@
      </svg>
      <div id="left-turn-button" class="drive-ctrl turn-signal left log-mousehold"><span class="label">Turn Left</span></div>
      <div id="right-turn-button" class="drive-ctrl turn-signal right log-mousehold"><span class="label">Turn Right</span></div>
-     <div id="bumper-contact-display">
+     <!--<div id="bumper-contact-display">
         <div id="bumper-1" class="bumper corner corner-fr"></div>
         <div id="bumper-2" class="bumper corner corner-br"></div>
         <div id="bumper-3" class="bumper corner corner-bl"></div>
@@ -243,13 +243,13 @@
         <div id="edge-contact-sw" class="edge-contact sw"></div>
         <div id="edge-contact-w" class="edge-contact w"></div>
         <div id="edge-contact-nw" class="edge-contact nw"></div>
-     </div>
+     </div>-->
      <!-- divs for torso controls -->
      <img id="torso-tall-icon" src="./css/icons/tall.png"></img>
      <img id="torso-short-icon" src="./css/icons/short.png"></img>
      <div id="torso-slider" class="log-slide"></div>
      <!-- Skin contact display layer -->
-     <div id="skin-contact-display">
+     <!--<div id="skin-contact-display">
         <div id="edge-contact-n" class="edge-contact n"></div>
         <div id="edge-contact-ne" class="edge-contact ne"></div>
         <div id="edge-contact-e" class="edge-contact e"></div>
@@ -266,7 +266,7 @@
         <div id="contact-marker-6" class="contact-marker"></div>
         <div id="contact-marker-7" class="contact-marker"></div>
         <div id="contact-marker-8" class="contact-marker"></div>
-     </div>
+     </div> -->
      <!-- divs for arm controls -->
      <div id='armCtrlContainer' class="ctrlContainer arm-ctrl">
          <!--<div class="slider"></div>-->
