attempt at fixing bug in vci during startup

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -180,19 +180,19 @@
                 <label for="arm-select" class="option-select option-adl">Select arm</label>
                 <select id="arm-select" name="arm-select" class="option-select option-adl">
                     <option value="left_arm">Left Arm</option>
-                    <option value="right_arm">Right Arm</option>
+                    <!--option value="right_arm">Right Arm</option-->
                 </select>
             </form>
           <div id="start-task-button" class="task-button log-click">Start Task</div>
         </div>
     </div>
 
-    <div id="undo" class="log-click"><p>Undo</p></div>
+    <!--<div id="undo" class="log-click"><p>Undo</p></div>-->
      <div id="util-bar">
         <div id='battery-status'>
             <div class='battery-contact'></div>
             <div class='battery-main'>
-                <span class="time">?</SPan>
+                <span class="time">?</span>
                 <div class="charge-bolt">
                     <div class="triangle tri-up"></div>
                     <div class="triangle tri-down"></div>
