attempt at fixing bug in vci during startup

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -31,7 +31,7 @@
 
   <!-- Interface components -->
   <script type="text/javascript" src="js/init.js"></script>
-  <script type="text/javascript" src="js/utils/undo.js"></script>
+  <!--<script type="text/javascript" src="js/utils/undo.js"></script>-->
   <script type="text/javascript" src="js/utils/runstop.js"></script>
   <script type="text/javascript" src="js/utils/heartbeat.js"></script>
   <script type="text/javascript" src="js/utils/datalogging.js"></script>
@@ -63,8 +63,8 @@
   <link type="text/css" href="css/action-menu.css" rel="stylesheet" />
   <link type="text/css" href="css/battery.css" rel="stylesheet" />
   <link type="text/css" href="css/ee-cart.css" rel="stylesheet" />
-  <link type="text/css" href="css/skin.css" rel="stylesheet" />
-  <link type="text/css" href="css/bumper.css" rel="stylesheet" />
+  <!--<link type="text/css" href="css/skin.css" rel="stylesheet" />
+  <link type="text/css" href="css/bumper.css" rel="stylesheet" />-->
   <link type="text/css" href="css/gripper.css" rel="stylesheet" />
   <!--link type="text/css" href="css/undo.css" rel="stylesheet" /-->
   <link type="text/css" href="css/smach.css" rel="stylesheet" />
