fixed arm selection confusing task selection

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -174,11 +174,11 @@
                     <option value="wiping_mouth">Wipe Mouth</option>
                     <option value="scratching_left_knee">Wipe Left Knee</option>
                 </select>
-                <label for="arm-select" class="option-select option-adl">Select arm</label>
+                <!--<label for="arm-select" class="option-select option-adl">Select arm</label>
                 <select id="arm-select" name="arm-select" class="option-select option-adl">
                     <option value="left_arm">Left Arm</option>
                     <!--option value="right_arm">Right Arm</option-->
-                </select>
+                </select>-->
             </form>
           <div id="start-task-button" class="task-button log-click">Start Task</div>
         </div>
