fixes to adl implementation in html

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -185,16 +185,7 @@
                 <select id="task-select" name="task-select" class="option-select option-adl">
                     <option value="shaving">Shave Face</option>
                     <option value="wiping_mouth">Wipe Mouth</option>
-                    <option value="scratching_forehead">Scratch Forehead</option>
-                    <option value="scratching_left_knee">Scratch Left Knee</option>
-                    <option value="scratching_right_knee">Scratch Right Knee</option>
-                </select>
-
-                </select>
-                <label for="model-select" class="option-select option-adl">Select a Location</label>
-                <select id="model-select" name="model-select" class='option-select option-adl'>
-                    <option value="autobed">Autobed</option>
-                    <option value="wheelchair">Wheelchair</option>
+                    <option value="scratching_left_knee">Wip Left Knee</option>
                 </select>
             </form>
           <div id="start-task-button" class="task-button log-click">Start Task</div>
@@ -207,7 +198,7 @@
         <div id='battery-status'>
             <div class='battery-contact'></div>
             <div class='battery-main'>
-                <span class="time">?</SPan>
+                <span class="time">?</span>
                 <div class="charge-bolt">
                     <div class="triangle tri-up"></div>
                     <div class="triangle tri-down"></div>
