--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -183,9 +183,8 @@
                 
                 <label for="task-select" class="option-select option-adl">Select a Self-care Task</label>
                 <select id="task-select" name="task-select" class="option-select option-adl">
-                    <option value="shaving">Shave Face</option>
                     <option value="wiping_mouth">Wipe Mouth</option>
-                    <option value="scratching_left_knee">Wip Left Knee</option>
+                    <option value="scratching_left_knee">Wipe Left Knee</option>
                 </select>
             </form>
           <div id="start-task-button" class="task-button log-click">Start Task</div>
