--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -172,7 +172,7 @@
                 <label for="task-select" class="option-select option-adl">Select a Self-care Task</label>
                 <select id="task-select" name="task-select" class="option-select option-adl">
                     <option value="wiping_mouth">Wipe Mouth</option>
-                    <option value="scratching_left_knee">Wipe Left Knee</option>
+                    <option value="scratching">Wipe Left Knee</option>
                 </select>
                 <!--<label for="arm-select" class="option-select option-adl">Select arm</label>-->
                 <!--<select id="arm-select" name="arm-select" class="option-select option-adl">-->
