various tweaks and fixes from during trials

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -7,9 +7,19 @@
   <title>Control Interface</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!-- Jquery and JQueryUI -->
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/sunny/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  <!--
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"
+          integrity="sha256-Xxq2X+KtazgaGuA2cWR1v3jJsuMJUozyIXDB3e793L8="
+          crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
+          integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
+          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/sunny/jquery-ui.css">
+  -->
+
   <script type="text/javascript" src="js/numeric/numeric-1.2.6.js"></script>
   <script type="text/javascript" src="js/snap/snap.svg.js"></script>
 
