re-out connection monitor, add local jquery libs

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -7,10 +7,16 @@
   <title>Control Interface</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!-- Jquery and JQueryUI -->
+  <!--
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/sunny/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  -->
+  <script src="js/lib/jquery-1.12.0.js"></script>
+  <link rel="stylesheet" href="css/jquery-ui-1.11.4.custom/jquery-ui.min.css">
+  <script src="css/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
   <!--
+  <script src="js/lib/jquery-ui.1.11.4.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"
           integrity="sha256-Xxq2X+KtazgaGuA2cWR1v3jJsuMJUozyIXDB3e793L8="
           crossorigin="anonymous"></script>
